--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: "0.5.0"
-  firebase_auth: ^0.18.0+1
-  cloud_firestore: ^0.14.0+2
+  cloud_firestore: ^0.13.5
+  firebase_auth: ^0.16.1
+  image_picker: ^0.6.5+3
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  path_provider: ^1.6.14
-  provider: ^4.3.2+1
+
 
 dev_dependencies:
   flutter_test:
